# tubescrape

./: README.md  demo.py  pyproject.toml  test_all_features.py
docs/: guide.md
src/tubescrape/: __init__.py  _http.py  _innertube.py  _parsers.py  browse.py  client.py  exceptions.py  models.py  search.py  transcript.py
src/tubescrape/api/: schemas.py
src/tubescrape/api/routes/: channel.py  search.py
src/tubescrape/cli/: output.py
src/tubescrape/cli/commands/: search.py
tests/: test_integration.py  test_live.py  test_parsers.py  test_playlist.py
tests/fixtures/: live_playlist.json
